QZ-415. Fix real time not loading on safari.

--- a/app/styles/components/reports/class-assessment/_gru-questions-summary.scss
+++ b/app/styles/components/reports/class-assessment/_gru-questions-summary.scss
@@ -21,9 +21,10 @@
 
     li {
       height: $question-height;
-      max-width: $max-question-width;
+      width: $max-question-width;
       padding-left: 2em;
       display: table;
+      flex-shrink: 0;
 
       > a {
         display: -ms-flexbox;
